--- a/nginx-proxy.conf
+++ b/nginx-proxy.conf
@@ -5,7 +5,7 @@ upstream tao {
 server {
     listen 127.0.0.1:80;
     server_name tao.docker;
-    root /Users/alroniks/dev/docker/tao;
+    root PROJECT_ROOT;
     location / {
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
