--- a/nginx-proxy.conf
+++ b/nginx-proxy.conf
@@ -4,13 +4,13 @@ upstream tao {
 
 server {
     listen 127.0.0.1:80;
-    server_name tao.docker;
-    root PROJECT_ROOT;
+    server_name PROJECT_NAME_VALUE.docker;
+    root PROJECT_ROOT_VALUE;
     location / {
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header Host $http_host;
         proxy_set_header X-NginX-Proxy true;
-        proxy_pass http://tao;
+        proxy_pass http://PROJECT_NAME_VALUE;
     }
 }
